--- a/.gitignore
+++ b/.gitignore
@@ -475,3 +475,6 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+Client/obj/Debug/net6.0/project.razor.vscode.bin
+.gitignore
+Server/obj/Debug/net6.0/project.razor.vscode.bin
