--- a/.gitignore
+++ b/.gitignore
@@ -478,3 +478,4 @@ $RECYCLE.BIN/
 Client/obj/Debug/net6.0/project.razor.vscode.bin
 .gitignore
 Server/obj/Debug/net6.0/project.razor.vscode.bin
+Server/obj/Debug/net6.0/PortfolioWebsite.Server.csproj.AssemblyReference.cache
