--- a/.gitignore
+++ b/.gitignore
@@ -509,3 +509,4 @@ Shared/obj/Debug/net6.0/PortfolioWebsite.Shared.csproj.CoreCompileInputs.cache
 Shared/obj/Debug/net6.0/PortfolioWebsite.Shared.dll
 Shared/obj/Debug/net6.0/PortfolioWebsite.Shared.GeneratedMSBuildEditorConfig.editorconfig
 Shared/obj/Debug/net6.0/PortfolioWebsite.Shared.pdb
+Server/obj/Debug/net6.0/project.razor.vscode.bin
