--- a/.gitignore
+++ b/.gitignore
@@ -510,3 +510,10 @@ Shared/obj/Debug/net6.0/PortfolioWebsite.Shared.dll
 Shared/obj/Debug/net6.0/PortfolioWebsite.Shared.GeneratedMSBuildEditorConfig.editorconfig
 Shared/obj/Debug/net6.0/PortfolioWebsite.Shared.pdb
 Server/obj/Debug/net6.0/project.razor.vscode.bin
+Client/obj/Debug/net6.0/PortfolioWebsite.Client.assets.cache
+Client/obj/Debug/net6.0/project.razor.vscode.bin
+Server/obj/Debug/net6.0/PortfolioWebsite.Server.assets.cache
+Server/obj/Debug/net6.0/PortfolioWebsite.Server.csproj.AssemblyReference.cache
+Server/obj/Debug/net6.0/PortfolioWebsite.Server.GeneratedMSBuildEditorConfig.editorconfig
+Server/obj/Debug/net6.0/project.razor.vscode.bin
+Shared/obj/Debug/net6.0/PortfolioWebsite.Shared.assets.cache
